fix build configs

--- a/src/lexer/CMakeLists.txt
+++ b/src/lexer/CMakeLists.txt
@@ -1,1 +1,6 @@
 
+# library for lexer
+add_library(lexer_lib Lexer.cpp)
+
+# Include the headers
+target_include_directories(lexer_lib PUBLIC ${CMAKE_SOURCE_DIR}/include)
