add llvm dependencies

--- a/src/llvm_ir/CMakeLists.txt
+++ b/src/llvm_ir/CMakeLists.txt
@@ -7,6 +7,9 @@ target_include_directories(llvm_ir_lib PUBLIC ${CMAKE_SOURCE_DIR}/include)
 # we will generate LLVM IR from custom IR so we link the ir library
 target_link_libraries(llvm_ir_lib PRIVATE ir_lib)
 
+# setting llvm dir
+set(LLVM_DIR "/usr/local/lib/cmake/llvm") 
+
 # Find LLVM
 find_package(LLVM REQUIRED CONFIG)
 
@@ -15,7 +18,7 @@ include_directories(${LLVM_INCLUDE_DIRS})
 add_definitions(${LLVM_DEFINITIONS})
 
 # Map LLVM components to library names
-llvm_map_components_to_libnames(LLVM_LIBS support core irreader mc)
+llvm_map_components_to_libnames(LLVM_LIBS support core irreader mc scalaropts)
 
 # Link LLVM libraries
 target_link_libraries(llvm_ir_lib
