--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -9,7 +9,4 @@ add_subdirectory(optimizer)
 add_subdirectory(parser)
 
 # Link the libraries
-target_link_libraries(TransISA 
-    PRIVATE
-    optimizer_lib
-)
+target_link_libraries(TransISA PRIVATE optimizer_lib)
