added initial lexing

--- a/src/lexer/CMakeLists.txt
+++ b/src/lexer/CMakeLists.txt
@@ -1,5 +1,5 @@
 # library for lexer
-add_library(lexer_lib Lexer.cpp)
+add_library(lexer_lib Lexer.cpp Token.cpp Trie.cpp)
 
 # Include the headers
 target_include_directories(lexer_lib PUBLIC ${CMAKE_SOURCE_DIR}/include)
