--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,5 +1,18 @@
-# Executable
-add_executable(TransISA main.cpp)
+# Set LLVM directory
+set(LLVM_DIR "/usr/local/lib/cmake/llvm")
+
+# Find LLVM package
+find_package(LLVM REQUIRED CONFIG)
+
+# Include LLVM directories
+include_directories(${LLVM_INCLUDE_DIRS})
+add_definitions(${LLVM_DEFINITIONS})
+
+# Map LLVM components to library names
+llvm_map_components_to_libnames(LLVM_LIBS support core irreader mc scalaropts)
+
+# Add include directories
+include_directories(${CMAKE_SOURCE_DIR}/include)
 
 # subdirectories
 add_subdirectory(ir)
@@ -8,5 +21,8 @@ add_subdirectory(llvm_ir)
 add_subdirectory(optimizer)
 add_subdirectory(parser)
 
+# Executable
+add_executable(TransISA main.cpp)
+
 # Link the libraries
-target_link_libraries(TransISA PRIVATE optimizer_lib)
+target_link_libraries(TransISA PRIVATE optimizer_lib ${LLVM_LIBS})
