--- a/src/optimizer/CMakeLists.txt
+++ b/src/optimizer/CMakeLists.txt
@@ -5,4 +5,4 @@ add_library(optimizer_lib Optimizer.cpp)
 target_include_directories(optimizer_lib PUBLIC ${CMAKE_SOURCE_DIR}/include)
 
 # link llvm_ir library
-target_link_libraries(optimizer_lib PRIVATE llvm_ir_lib)
+target_link_libraries(optimizer_lib PRIVATE llvm_ir_lib ${LLVM_LIBS})
