--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -19,9 +19,7 @@ jobs:
           sudo apt-get install -y cmake libgtest-dev ninja-build
 
       - name: Install LLVM
-        uses: KyleMayes/install-llvm-action@v2
-        with:
-            version: "19.1.0 "
+        run: sudo apt-get install -y llvm llvm-dev clang libclang1 libclang-dev
 
       - name: Build and run tests
         run: |
