--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -19,8 +19,10 @@ jobs:
           sudo apt-get install -y cmake libgtest-dev ninja-build
 
       - name: Install LLVM
-        run: sudo apt-get install -y llvm llvm-dev clang libclang1 libclang-dev
-
+        run: sudo apt-get install -y llvm-19 llvm-dev clang libclang1 libclang-dev
+    
+      - name: Verify LLVM Version
+        run: llvm-config --version
       - name: Build and run tests
         run: |
           cmake -B build -S . -G Ninja
