--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -19,10 +19,7 @@ jobs:
           sudo apt-get install -y cmake libgtest-dev ninja-build
 
       - name: Install LLVM
-        run: |
-          wget https://apt.llvm.org/llvm.sh
-          chmod +x llvm.sh
-          sudo ./llvm.sh 19
+        run: sudo apt-get install -y llvm-19
     
       - name: Verify LLVM Version
         run: llvm-config --version
