--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -19,7 +19,7 @@ jobs:
           sudo apt-get install -y cmake libgtest-dev ninja-build
 
       - name: Install LLVM
-        run: sudo apt-get install -y llvm-19
+        run: sudo apt-get install -y llvm-19 llvm-19-dev
     
       - name: Verify LLVM Version
         run: llvm-config --version
