--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -17,12 +17,18 @@ jobs:
         run: |
           sudo apt-get update
           sudo apt-get install -y cmake libgtest-dev ninja-build
-
-      - name: Install LLVM
-        run: sudo apt-get install -y llvm-19 llvm-19-dev
-    
-      - name: Verify LLVM Version
-        run: llvm-config --version
+      - name: Install LLVM 19
+        run: |
+          wget https://apt.llvm.org/llvm.sh
+          chmod +x llvm.sh
+          sudo ./llvm.sh 19
+          sudo apt-get install -y llvm-19 llvm-19-dev
+  
+      - name: Verify LLVM Installation
+        run: |
+          llvm-config-19 --version
+          llvm-config-19 --cxxflags
+  
       - name: Build and run tests
         run: |
           cmake -B build -S . -G Ninja
