--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -13,21 +13,30 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
+
       - name: Install dependencies
         run: |
           sudo apt-get update
           sudo apt-get install -y cmake libgtest-dev ninja-build
+
       - name: Install LLVM 19
         run: |
           sudo apt-get install -y llvm-19-dev clang-19 lld-19 lldb-19
-  
+
+      - name: Set LLVM Environment Variables
+        run: |
+          echo "CC=/usr/bin/clang-19" >> $GITHUB_ENV
+          echo "CXX=/usr/bin/clang++-19" >> $GITHUB_ENV
+          echo "LLVM_DIR=/usr/lib/llvm-19/cmake" >> $GITHUB_ENV
+
       - name: Verify LLVM Installation
         run: |
+          clang-19 --version
           llvm-config-19 --version
           llvm-config-19 --cxxflags
-  
+
       - name: Build and run tests
         run: |
-          cmake -B build -S . -G Ninja
+          cmake -B build -S . -G Ninja -DLLVM_DIR=$LLVM_DIR
           cmake --build build
           ./build/tests/test_lexer
