--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -1,4 +1,4 @@
-name: Test the implemented components
+name: Exhaustive Tests
 
 on:
   push:
@@ -10,30 +10,43 @@ on:
 
 jobs:
   run-tests:
-    runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        os: [ubuntu-latest, macos-latest]  # Run on both Linux and macOS
+    runs-on: ${{ matrix.os }}
+
     steps:
       - uses: actions/checkout@v2
 
-      - name: Install dependencies
+      - name: Install dependencies (Ubuntu)
+        if: runner.os == 'Linux'
         run: |
           sudo apt-get update
-          sudo apt-get install -y cmake libgtest-dev ninja-build
+          sudo apt-get install -y cmake libgtest-dev ninja-build llvm-19-dev clang-19 lld-19 lldb-19
 
-      - name: Install LLVM 19
+      - name: Install dependencies (macOS)
+        if: runner.os == 'macOS'
         run: |
-          sudo apt-get install -y llvm-19-dev clang-19 lld-19 lldb-19
-
+          brew update
+          brew install cmake ninja llvm@19
+          
       - name: Set LLVM Environment Variables
         run: |
-          echo "CC=/usr/bin/clang-19" >> $GITHUB_ENV
-          echo "CXX=/usr/bin/clang++-19" >> $GITHUB_ENV
-          echo "LLVM_DIR=/usr/lib/llvm-19/cmake" >> $GITHUB_ENV
+          if [[ "$RUNNER_OS" == "Linux" ]]; then
+            echo "CC=/usr/bin/clang-19" >> $GITHUB_ENV
+            echo "CXX=/usr/bin/clang++-19" >> $GITHUB_ENV
+            echo "LLVM_DIR=/usr/lib/llvm-19/cmake" >> $GITHUB_ENV
+          elif [[ "$RUNNER_OS" == "macOS" ]]; then
+            echo "CC=$(brew --prefix llvm@19)/bin/clang" >> $GITHUB_ENV
+            echo "CXX=$(brew --prefix llvm@19)/bin/clang++" >> $GITHUB_ENV
+            echo "LLVM_DIR=$(brew --prefix llvm@19)/lib/cmake/llvm" >> $GITHUB_ENV
+          fi
 
       - name: Verify LLVM Installation
         run: |
-          clang-19 --version
-          llvm-config-19 --version
-          llvm-config-19 --cxxflags
+          clang --version
+          llvm-config --version
+          llvm-config --cxxflags
 
       - name: Build and run tests
         run: |
