--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -1,4 +1,4 @@
-name: Exhaustive Tests
+name: Run Exhaustive Tests
 
 on:
   push:
@@ -22,30 +22,29 @@ jobs:
         if: runner.os == 'Linux'
         run: |
           sudo apt-get update
-          sudo apt-get install -y cmake libgtest-dev ninja-build llvm-19-dev clang-19 lld-19 lldb-19
+          sudo apt-get install -y cmake libgtest-dev ninja-build llvm-19 llvm-19-dev clang-19 lld-19 lldb-19
+          echo "LLVM_DIR=/usr/lib/llvm-19/cmake" >> $GITHUB_ENV
+          echo "CC=/usr/bin/clang-19" >> $GITHUB_ENV
+          echo "CXX=/usr/bin/clang++-19" >> $GITHUB_ENV
+          echo "PATH=/usr/lib/llvm-19/bin:$PATH" >> $GITHUB_ENV
 
       - name: Install dependencies (macOS)
         if: runner.os == 'macOS'
         run: |
           brew update
           brew install cmake ninja llvm@19
-          
-      - name: Set LLVM Environment Variables
-        run: |
-          if [[ "$RUNNER_OS" == "Linux" ]]; then
-            echo "CC=/usr/bin/clang-19" >> $GITHUB_ENV
-            echo "CXX=/usr/bin/clang++-19" >> $GITHUB_ENV
-            echo "LLVM_DIR=/usr/lib/llvm-19/cmake" >> $GITHUB_ENV
-          elif [[ "$RUNNER_OS" == "macOS" ]]; then
-            echo "CC=$(brew --prefix llvm@19)/bin/clang" >> $GITHUB_ENV
-            echo "CXX=$(brew --prefix llvm@19)/bin/clang++" >> $GITHUB_ENV
-            echo "LLVM_DIR=$(brew --prefix llvm@19)/lib/cmake/llvm" >> $GITHUB_ENV
-          fi
+          echo "LLVM_DIR=$(brew --prefix llvm@19)/lib/cmake/llvm" >> $GITHUB_ENV
+          echo "CC=$(brew --prefix llvm@19)/bin/clang" >> $GITHUB_ENV
+          echo "CXX=$(brew --prefix llvm@19)/bin/clang++" >> $GITHUB_ENV
+          echo "PATH=$(brew --prefix llvm@19)/bin:$PATH" >> $GITHUB_ENV
 
       - name: Verify LLVM Installation
         run: |
+          echo "Using Clang version:"
           clang --version
+          echo "Using LLVM version:"
           llvm-config --version
+          echo "LLVM CXX Flags:"
           llvm-config --cxxflags
 
       - name: Build and run tests
