--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -80,4 +80,4 @@ jobs:
           # move to the build directory
           cd build
           # run the tests
-          make run_all_tests
+          ninja run_all_tests
