--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,5 +1,9 @@
-# Set LLVM directory
-set(LLVM_DIR "/usr/local/lib/cmake/llvm")
+cmake_minimum_required(VERSION 3.15)
+
+project(TransISA)
+
+# Set the LLVM directory
+set(LLVM_DIR "/opt/homebrew/opt/llvm@19/lib/cmake/llvm")
 
 # Find LLVM package
 find_package(LLVM REQUIRED CONFIG)
@@ -8,13 +12,21 @@ find_package(LLVM REQUIRED CONFIG)
 include_directories(${LLVM_INCLUDE_DIRS})
 add_definitions(${LLVM_DEFINITIONS})
 
+# Set Clang as the compiler
+set(CMAKE_C_COMPILER "/opt/homebrew/opt/llvm@19/bin/clang")
+set(CMAKE_CXX_COMPILER "/opt/homebrew/opt/llvm@19/bin/clang++")
+
+# Ensure that libc++ is used
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -stdlib=libc++")
+include_directories(/opt/homebrew/opt/llvm@19/include/c++/v1)
+
 # Map LLVM components to library names
 llvm_map_components_to_libnames(LLVM_LIBS support core irreader mc scalaropts)
 
 # Add include directories
 include_directories(${CMAKE_SOURCE_DIR}/include)
 
-# subdirectories
+# Subdirectories
 add_subdirectory(lexer)
 add_subdirectory(llvm_ir)
 add_subdirectory(optimizer)
