--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -70,8 +70,10 @@ jobs:
           export CMAKE_AR=$CMAKE_AR
           export CMAKE_RANLIB=$CMAKE_RANLIB
           export PATH=$PATH
-          export LD_LIBRARY_PATH=$LD_LIBRARY_PATH
-          export DYLD_LIBRARY_PATH=$DYLD_LIBRARY_PATH
+          export LD_LIBRARY_PATH=$(brew --prefix llvm@19)/lib:$LD_LIBRARY_PATH
+          export DYLD_LIBRARY_PATH=$(brew --prefix llvm@19)/lib:$DYLD_LIBRARY_PATH
+          export CMAKE_CXX_FLAGS="-I$(brew --prefix llvm@19)/include/c++/v1 -stdlib=libc++"
+          export CMAKE_EXE_LINKER_FLAGS="-stdlib=libc++ -L$(brew --prefix llvm@19)/lib"
 
           rm -rf build  # Delete old build artifacts
           cmake -B build -S . -G Ninja \
@@ -79,7 +81,9 @@ jobs:
             -DCMAKE_CXX_COMPILER=$CXX \
             -DCMAKE_AR=$CMAKE_AR \
             -DCMAKE_RANLIB=$CMAKE_RANLIB \
-            -DCMAKE_BUILD_TYPE=Release
+            -DCMAKE_BUILD_TYPE=Release \
+            -DCMAKE_CXX_FLAGS="$CMAKE_CXX_FLAGS" \
+            -DCMAKE_EXE_LINKER_FLAGS="$CMAKE_EXE_LINKER_FLAGS"
           cmake --build build --verbose
 
       - name: Debug Static Library Issues (if build fails)
