--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -19,12 +19,20 @@ jobs:
       - name: Checkout Repository
         uses: actions/checkout@v4
 
+      - name: Cache LLVM
+        uses: actions/cache@v4
+        with:
+          path: |
+            /usr/local/opt/llvm@19  # macOS
+            /usr/lib/llvm-19        # Linux
+          key: ${{ runner.os }}-llvm-19
+
       - name: Install dependencies (Ubuntu)
         if: runner.os == 'Linux'
         run: |
           sudo apt-get update
           sudo apt-get install -y cmake libgtest-dev ninja-build llvm-19 llvm-19-dev clang-19 lld-19 lldb-19
-          
+
           echo "LLVM_DIR=/usr/lib/llvm-19/cmake" >> $GITHUB_ENV
           echo "CC=/usr/bin/clang-19" >> $GITHUB_ENV
           echo "CXX=/usr/bin/clang++-19" >> $GITHUB_ENV
@@ -38,7 +46,7 @@ jobs:
         run: |
           brew update
           brew install cmake ninja llvm@19
-          
+
           echo "LLVM_DIR=$(brew --prefix llvm@19)/lib/cmake/llvm" >> $GITHUB_ENV
           echo "CC=$(brew --prefix llvm@19)/bin/clang" >> $GITHUB_ENV
           echo "CXX=$(brew --prefix llvm@19)/bin/clang++" >> $GITHUB_ENV
@@ -50,49 +58,32 @@ jobs:
       - name: Verify LLVM Installation
         run: |
           echo "Using Clang version:"
-          $CC --version
+          clang --version
           echo "Using LLVM version:"
-          llvm-config --version
+          llvm-config --version | grep "19" || echo "Wrong LLVM version installed."
           echo "LLVM CXX Flags:"
           llvm-config --cxxflags
-          echo "Environment Variables:"
-          echo "CC=$CC"
-          echo "CXX=$CXX"
-          echo "LLVM_DIR=$LLVM_DIR"
-          echo "PATH=$PATH"
-          echo "LD_LIBRARY_PATH=$LD_LIBRARY_PATH"
-          echo "DYLD_LIBRARY_PATH=$DYLD_LIBRARY_PATH"
 
       - name: Clean and Rebuild
         run: |
-          export CC=$CC
-          export CXX=$CXX
-          export CMAKE_AR=$CMAKE_AR
-          export CMAKE_RANLIB=$CMAKE_RANLIB
-          export PATH=$PATH
-          export LD_LIBRARY_PATH=$(brew --prefix llvm@19)/lib:$LD_LIBRARY_PATH
-          export DYLD_LIBRARY_PATH=$(brew --prefix llvm@19)/lib:$DYLD_LIBRARY_PATH
-          export CMAKE_CXX_FLAGS="-I$(brew --prefix llvm@19)/include/c++/v1 -stdlib=libc++"
-          export CMAKE_EXE_LINKER_FLAGS="-stdlib=libc++ -L$(brew --prefix llvm@19)/lib"
-
-          rm -rf build  # Delete old build artifacts
+          rm -rf build
           cmake -B build -S . -G Ninja \
             -DCMAKE_C_COMPILER=$CC \
             -DCMAKE_CXX_COMPILER=$CXX \
             -DCMAKE_AR=$CMAKE_AR \
             -DCMAKE_RANLIB=$CMAKE_RANLIB \
-            -DCMAKE_BUILD_TYPE=Release \
-            -DCMAKE_CXX_FLAGS="$CMAKE_CXX_FLAGS" \
-            -DCMAKE_EXE_LINKER_FLAGS="$CMAKE_EXE_LINKER_FLAGS"
-          cmake --build build --verbose
+            -DCMAKE_BUILD_TYPE=Release
+          cmake --build build --verbose --target all
 
       - name: Debug Static Library Issues (if build fails)
         if: failure()
         run: |
-          find build -name "*.a" -exec file {} \; || echo "No static libraries found"
-          find build -name "*.a" -exec nm -g {} \; || echo "No symbols in static libraries"
+          file build/src/ir/libir_lib.a || echo "libir_lib.a not found"
+          file build/src/parser/libparser_lib.a || echo "libparser_lib.a not found"
+          nm -g build/src/ir/libir_lib.a || echo "No symbols in libir_lib.a"
+          nm -g build/src/parser/libparser_lib.a || echo "No symbols in libparser_lib.a"
 
       - name: Run Tests
         run: |
           cd build
-          ninja run_all_tests
+          ctest --output-on-failure -j$(nproc || sysctl -n hw.ncpu)
