simple aarch64 target codegen

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -7,8 +7,33 @@ FetchContent_Declare(
   GIT_TAG release-1.12.1)
 FetchContent_MakeAvailable(googletest)
 
-# Set LLVM directory
-set(LLVM_DIR "/usr/local/lib/cmake/llvm")
+# Set LLVM directory Set LLVM directory
+if(APPLE)
+  # macOS - Homebrew installation (Apple Silicon or Intel)
+  if(EXISTS "/opt/homebrew/opt/llvm@19/lib/cmake/llvm")
+    set(LLVM_DIR "/opt/homebrew/opt/llvm@19/lib/cmake/llvm")
+  elseif(EXISTS "/usr/local/opt/llvm@19/lib/cmake/llvm")
+    set(LLVM_DIR "/usr/local/opt/llvm@19/lib/cmake/llvm")
+  endif()
+elseif(UNIX AND NOT APPLE)
+  # Linux - Check common installation paths
+  if(EXISTS "/usr/lib/llvm-19/lib/cmake/llvm")
+    set(LLVM_DIR "/usr/lib/llvm-19/lib/cmake/llvm")
+  elseif(EXISTS "/usr/local/lib/llvm-19/lib/cmake/llvm")
+    set(LLVM_DIR "/usr/local/lib/llvm-19/lib/cmake/llvm")
+  elseif(EXISTS "/usr/lib/llvm/lib/cmake/llvm")
+    set(LLVM_DIR "/usr/lib/llvm/lib/cmake/llvm")
+  elseif(EXISTS "/usr/local/lib/cmake/llvm")
+    set(LLVM_DIR "/usr/local/lib/cmake/llvm")
+  endif()
+endif()
+
+if(NOT DEFINED LLVM_DIR)
+  message(
+    FATAL_ERROR
+      "LLVM directory not found. Set LLVM_DIR manually or install LLVM properly."
+  )
+endif()
 
 # Find LLVM package
 find_package(LLVM REQUIRED CONFIG)
@@ -18,7 +43,21 @@ include_directories(${LLVM_INCLUDE_DIRS})
 add_definitions(${LLVM_DEFINITIONS})
 
 # Map LLVM components to library names
-llvm_map_components_to_libnames(LLVM_LIBS support core irreader mc scalaropts)
+llvm_map_components_to_libnames(
+  LLVM_LIBS
+  core
+  support
+  irreader
+  mc
+  target
+  aarch64codegen
+  aarch64desc
+  aarch64asmparser
+  aarch64disassembler
+  aarch64info
+  aarch64utils
+  asmprinter
+  bitwriter)
 
 # Add test executables
 add_executable(test_lexer test_lexer.cpp)
@@ -26,10 +65,9 @@ add_executable(test_parser test_parser.cpp)
 add_executable(test_llvm_codegen test_llvm_codegen.cpp)
 
 # Link all libraries to the test executables
-target_link_libraries(test_lexer PRIVATE optimizer_lib gtest_main)
-target_link_libraries(test_parser PRIVATE optimizer_lib gtest_main)
-target_link_libraries(test_llvm_codegen PRIVATE optimizer_lib gtest_main
-                                                ${LLVM_LIBS})
+target_link_libraries(test_lexer PRIVATE codegen_lib gtest_main)
+target_link_libraries(test_parser PRIVATE codegen_lib gtest_main)
+target_link_libraries(test_llvm_codegen PRIVATE codegen_lib gtest_main)
 
 # Enable testing
 enable_testing()
