--- a/.gitignore
+++ b/.gitignore
@@ -36,3 +36,17 @@ build/
 .vscode/
 codes_86/
 _deps/
+
+# LLVM generated files
+*.ll
+*.bc
+*.s
+
+# docs
+docs/html/
+
+# machine binaries
+.DS_Store
+
+# becnhmarks
+benchmarking
