--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,23 +10,20 @@ if(NOT CMAKE_BUILD_TYPE)
 endif()
 
 if(APPLE)
-  include_directories(SYSTEM "${LLVM_INCLUDE_DIR}/c++/v1")
-  link_directories("${LLVM_LIB_DIR}")
   add_compile_options(-stdlib=libc++)
   add_link_options(-stdlib=libc++)
 endif()
 
 include_directories(${CMAKE_CURRENT_SOURCE_DIR})
 
-# subdirectories
+# Add subdirectories
 add_subdirectory(src)
 add_subdirectory(tests)
 add_subdirectory(examples)
 
+# Doxygen
 find_package(Doxygen)
-
 if(DOXYGEN_FOUND)
-  # documentation target
   add_custom_target(
     docs
     COMMAND ${DOXYGEN_EXECUTABLE} ${CMAKE_SOURCE_DIR}/docs/Doxyfile
